# Adsorption_Breakthrough_Analysis

./: .bumpversion.cfg  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.txt  pyproject.toml  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
AdsorptionBreakthroughAnalysis-0.0.1/: PKG-INFO  README.md  pyproject.toml
Explaining program/: 220819ZIF8Blank22and60%CO2at40C.csv  220824-ZIF-8-4and22%at40C.csv  Explaining_program.ipynb  README.md
Generate results/: Generate_results.ipynb  README.md  README.txt
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: Example 1 - renaming columns.ipynb  Lewatit_Dry_25C_1%CO220230426122012.csv  Lewatit_Dry_25C_1%CO220230502133217.csv  breakthrough_data.csv
explaining_program/: 220824-ZIF-8-4and22%at40C.csv  Explaining_program.ipynb
generate_results/: Generate_results.ipynb
src/: README.md
src/AdsorptionBreakthroughAnalysis/: __init__.py  __main__.py  breakthrough_analysis.py  cli.py  version.py
src/AdsorptionBreakthroughAnalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
template/: template.ipynb
tests/: __init__.py  test_results.py  test_version.py
tests/data/processed_data/: bench_220819-ZIF-8-dry-22%and60%40C20220819134938.txt_220819ZIF8Blank22and60%CO2at40C.csv.csv  bench_220824-ZIF-8-4and22%at40C.txt_220824-ZIF-8-4and22%at40C.csv.csv  bench_loading_experiment_22perc_ZIF8.pickle  bench_loading_experiment_22perc_ZIF8_blank.pickle
