[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AdsorptionBreakthroughAnalysis"
version = "0.0.2"
authors = [
  { name="Daniel Maroto-Andresen", email="dm937@cam.ac.uk" },
]
description = "For analysis of a breakthrough curve from the RCCS breakthrough rig. Coriolis flow meter analysis included."
readme = "README.txt"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas >= 1.4.2",
    "numpy >= 1.21.5",
    "notebook >= 5.0.0",
    "matplotlib >= 3.5.1",
    "seaborn >= 0.11.2",
    "scipy >= 1.7.3",
]

[project.urls]
"Homepage" = "https://github.com/dm937/AdsorptionBreakthroughAnalysis"
"Bug Tracker" = "https://github.com/dm937/AdsorptionBreakthroughAnalysis/issues"